fixing photo alignment

--- a/cliffsandcalories/css/style.css
+++ b/cliffsandcalories/css/style.css
@@ -74,6 +74,13 @@ a:hover {
 	padding-bottom: 20px;
 }
 
+#img_box_3 {
+	max-width: 380px;
+	max-height: 500px;
+	padding-bottom: 20px;
+	padding-left:  10px
+}
+
 .col-sm-3:hover span.img-caption-text{
 	opacity:.65;
 	filter:alpha(opacity=55);
